# deepgram-python-stt

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fly.toml  pyproject.toml  requirements.txt  sample.env
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/phases/01-eliminate-gevent-asgi-skeleton/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-PLAN.md  01-RESEARCH.md  01-VERIFICATION.md  02-PLAN.md
.planning/phases/02-async-test-infrastructure/: 02-01-PLAN.md  02-01-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-deepgram-sdk-streaming/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-file-streaming-batch/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-test-coverage-deployment/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
common/: batch_audio.py
config/: defaults.json
scripts/: test_redaction.py
static/: app.js  script.js  style.css
stt/: __init__.py  client.py  options.py
templates/: index.html
tests/: conftest.py  test_app.py  test_client.py  test_deepgram_sdk.py  test_options.py  test_streaming.py
