[project]
name = "flask-live-transcription"
version = "0.1.0"
description = ""
authors = [{ name = "Jacob-Lasky", email = "jacob.s.lasky@gmail.com" }]
requires-python = ">=3.12, <3.13"
readme = "README.md"
dependencies = [
    "deepgram-sdk==6.0.1",
    "fastapi>=0.115.0,<1",
    "python-socketio[asyncio]>=5.11.0,<6",
    "uvicorn>=0.30.0,<1",
    "httpx>=0.27.0,<1",
    "python-dotenv==1.0.0",
    "pydub>=0.25.1,<0.26",
    "sounddevice>=0.5.2,<0.6",
]

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
